--- a/doc/gnutls.texi
+++ b/doc/gnutls.texi
@@ -158,7 +158,7 @@ Documentation License''.
 * Internal architecture of GnuTLS::
 * Support::
 * Error codes::
-* Function reference::
+* API reference::
 * Supported ciphersuites in GnuTLS::
 * Copying Information::
 * Concept Index::
