--- a/doc/cha-cert-auth2.texi
+++ b/doc/cha-cert-auth2.texi
@@ -781,6 +781,7 @@ gnutls_privkey_t abs_key;
 @menu
 * Abstract public keys::
 * Abstract private keys::
+* Operations::
 @end menu
 
 
@@ -812,6 +813,7 @@ are not extractable.
 @showfuncD{gnutls_privkey_import_x509,gnutls_privkey_import_openpgp,gnutls_privkey_import_pkcs11,gnutls_privkey_import_ext}
 @showfuncB{gnutls_privkey_get_pk_algorithm,gnutls_privkey_get_type}
 
+@node Operations
 @subsection Operations
 The abstract key types can be used to access signing and
 signature verification operations with the underlying keys.
