use emph instead of cite since cite produces bad output in texi2html.

--- a/doc/gnutls.texi
+++ b/doc/gnutls.texi
@@ -63,8 +63,7 @@ Documentation License''.
 @end macro
 
 @macro xcite{ref}
-[@cite{\ref\}]
-@c (@pxref{Bibliography})
+[@emph{\ref\}]
 @end macro
 
 @macro funcref{ref}
