Added the --dh-info parameter to certtool.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 3.0.9 (unreleased)
 
+** certtool: Added new parameter --dh-info.
+
 ** certtool: -l option was overloaded so if combined with --priority
 it will only list the ciphersuites that are enabled by the given
 priority string.
@@ -18,15 +20,16 @@ session, a server will not store that session data into its cache.
 
 ** libgnutls: Added gnutls_priority_get_cipher_suite_index() to
 allow listing the ciphersuites enabled in a priority structure.
-It outputs and index to be used in gnutls_get_cipher_suite_info().
+It outputs an index to be used in gnutls_get_cipher_suite_info().
 
-** libgnutls: Optimizations in the elliptic curve code (timing
-attacks resistant code is only used in ECDSA private key operations).
+** libgnutls: Optimizations in the elliptic curve code --timing
+attacks resistant code is only used in ECDSA private key operations.
 
 ** doc: man pages for API functions generation was fixed and are
 now added again in the distribution.
 
 ** API and ABI modifications:
+GNUTLS_ECC_CURVE_SECP192R1: New curve definition
 gnutls_priority_get_cipher_suite_index: Added
 
 
