--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.9 (unreleased)
+* Version 3.0.9 (released 2011-12-13)
 
 ** certtool: Added new parameter --dh-info.
 
